[gd_scene load_steps=7 format=3 uid="uid://do8yftu0cfcof"]

[ext_resource type="Script" uid="uid://cddk3a57nfnhq" path="res://scripts/store_slot.gd" id="1_80s66"]
[ext_resource type="Texture2D" uid="uid://c1p1k1g5f1uan" path="res://assets/Coin (1).png" id="3_1fq57"]
[ext_resource type="Texture2D" uid="uid://cwqtvqvdphf8d" path="res://assets/QuesoVacio9.png" id="5_3bjj1"]
[ext_resource type="PackedScene" uid="uid://dblnjb14cqaif" path="res://scenes/tooltip.tscn" id="7_ikokg"]

[sub_resource type="FontVariation" id="FontVariation_80s66"]
variation_embolden = 1.0
spacing_top = -3
spacing_bottom = -7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80s66"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[node name="StoreSlot" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -4.0
offset_right = -695.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80s66")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 579.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_3bjj1")

[node name="ItemIcon" type="TextureRect" parent="TextureButton"]
layout_mode = 0
offset_left = 185.0
offset_top = 88.0
offset_right = 395.0
offset_bottom = 289.0
mouse_filter = 2
stretch_mode = 4

[node name="CountLabel" type="TextureRect" parent="TextureButton"]
layout_mode = 0
offset_left = 251.0
offset_top = 361.0
offset_right = 326.0
offset_bottom = 436.0
mouse_filter = 2

[node name="PriceLabel" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.432
anchor_bottom = 0.15400001
offset_left = 240.0
offset_top = 30.0
offset_right = 89.0
offset_bottom = 14.761993
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
layout_mode = 0
offset_left = 305.0
offset_top = 37.5
offset_right = 355.0
offset_bottom = 87.5
texture = ExtResource("3_1fq57")

[node name="Tooltip" parent="." instance=ExtResource("7_ikokg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TooExpensiveLabel" type="Label" parent="."]
visible = false
z_index = 10
layout_mode = 0
offset_left = 76.0
offset_top = 139.0
offset_right = 186.0
offset_bottom = 157.53772
rotation = -0.65642446
theme_override_colors/font_color = Color(0.5254902, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.16078432)
theme_override_fonts/font = SubResource("FontVariation_80s66")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_80s66")
text = "TOO EXPENSIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutOfStockLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 68.0
offset_top = 68.0
offset_right = 171.00002
offset_bottom = 86.537704
rotation = 0.43505508
theme_override_colors/font_color = Color(0.5254902, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.16078432)
theme_override_fonts/font = SubResource("FontVariation_80s66")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_80s66")
text = "OUT OF STOCK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxedLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 84.0
offset_top = 78.0
offset_right = 151.95523
offset_bottom = 96.537704
rotation = 0.43505508
theme_override_colors/font_color = Color(0.5254902, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.16078432)
theme_override_fonts/font = SubResource("FontVariation_80s66")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_80s66")
text = "MAXED"
horizontal_alignment = 1
vertical_alignment = 1
